Minor corrections - unit-9 spacing should be 4.5rem on large screens - details should have a top margin on its content, not a bottom margin on its summary

--- a/src/base/settings/spacing/_spacing.scss
+++ b/src/base/settings/spacing/_spacing.scss
@@ -40,7 +40,7 @@ $ds_spacing-scale: (
     ),
   9: (
     null:   3.5rem,
-    medium: 4rem
+    medium: 4.5rem
     )
 ) !default;
 
